# aoc2024

./: .gitignore  CMakeLists.txt  README.md
src/day1/: day1.c
src/day2/: day2.c
src/utils/: error.h  load_file.c  load_file.h  std_bindings.h
